force-app/main/default/objects/Vanquish_S__c/Vanquish_S__c.object-meta.xml
<CustomObject>
    <label>Vanquish(S)</label>
    <nameField>
        <label>Vanquish(S) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vanquish(S)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>