force-app/main/default/objects/Vanquish_S__c/fields/Employee_Removal_Initials__c.field-meta.xml
<CustomField>
    <fullName>Employee_Removal_Initials__c</fullName>
    <label>Employee Removal Initials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>