force-app/main/default/objects/Vanquish_S__c/fields/Hook_Up_Initials__c.field-meta.xml
<CustomField>
    <fullName>Hook_Up_Initials__c</fullName>
    <label>Hook-Up Initials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>