force-app/main/default/objects/Vanquish_S__c/fields/Hydration_Level__c.field-meta.xml
<CustomField>
    <fullName>Hydration_Level__c</fullName>
    <label>Hydration Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>