force-app/main/default/objects/Vanquish_S__c/fields/Power_Used__c.field-meta.xml
<CustomField>
    <fullName>Power_Used__c</fullName>
    <label>Power Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>