force-app/main/default/objects/Vanquish_S__c/fields/Vanquish__c.field-meta.xml
<CustomField>
    <fullName>Vanquish__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vanquish</label>
    <referenceTo>Vanquish__c</referenceTo>
    <relationshipLabel>Vanquish(S)</relationshipLabel>
    <relationshipName>Vanquish_S</relationshipName>
    <type>Lookup</type>
</CustomField>